log
Fri 19 Aug 2022 12:37:23 PM UTC: 
 tests:  0|6
total_score: 0/70
a219b5b
Fri 19 Aug 2022 12:43:10 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1a88a60
Fri 19 Aug 2022 12:44:18 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f32402b
Fri 19 Aug 2022 12:51:13 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:1: error: ‘L’ undeclared (first use in this function)
   40 | L -> current = L -> head;
      | ^
list.c:40:1: note: each undeclared identifier is reported only once for each function it appears in
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
11997ee
Fri 19 Aug 2022 12:51:51 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
77b8520
Fri 19 Aug 2022 12:55:47 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:26: error: ‘data’ undeclared (first use in this function)
   41 | return list -> current = data;
      |                          ^~~~
list.c:41:26: note: each undeclared identifier is reported only once for each function it appears in
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
14eec44
Fri 19 Aug 2022 12:55:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
29b0f88
Fri 19 Aug 2022 12:57:07 PM UTC: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|0
0c7f661
